Use dragnet instead of readability for text extraction from html

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 ujson
 numpy
+scipy
 pattern
 gensim
 msgpack-python
 findspark
 jupyter
 spacy
-readability-lxml
+lxml
 beautifulsoup4
 warc
 pycld2
+dragnet
